[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log430-a25-labo0"
version = "0.0.1"
readme = "README.md"
authors = [
    {name = "Felix-Antoine Legault", email = "felix-antoine.legault.2@ens.etsmtl.ca"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
